add design system shortcut for app

--- a/app/src/dev/res/values/strings.xml
+++ b/app/src/dev/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="app_name">ARK-dev</string>
     <string name="develop_menu_label">Develop Menu</string>
     <string name="develop_menu_disable_hint">Develop Menu has disabled!</string>
+    <string name="design_system_label">Design System</string>
+    <string name="design_system_disable_hint">Design System has disabled!</string>
 </resources>
