--- a/app/src/dev/res/values/strings.xml
+++ b/app/src/dev/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">ARK-dev</string>
+    <string name="app_name">ARK-Android-dev</string>
     <string name="develop_menu_label">Develop Menu</string>
     <string name="develop_menu_disable_hint">Develop Menu has disabled!</string>
     <string name="design_system_label">Design System</string>
