--- a/webview/src/main/res/values/strings.xml
+++ b/webview/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="web_view_404">404</string>
-    <string name="web_view_page_not_found">Page Not Found</string>
+    <string name="web_view_page_not_found">Page not found</string>
 </resources>
