--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="request_permission_dialog_content">Hi, Please allow APP to access your location. When location permission is enabled, you can see what\'s new around you.</string>
 
     <string name="android_version_storage_error">Sorry, please reduced version to 29 and below.</string>
+    <string name="android_system_write_remove_error">Sorry, get write or remove error.</string>
     <string name="check_default">check default</string>
     <string name="write_default">write default</string>
     <string name="remove_default">remove default</string>
